--- a/Meeting/MIDI.js-master/examples/violin16.html
+++ b/Meeting/MIDI.js-master/examples/violin16.html
@@ -188,16 +188,16 @@
 					color: 0xBB3D00
 				}));
 				violin1.position.set(2.67, 0, 0);
-				violin1.material.transparent = true;
-				violin1.material.opacity = 0;
+				//violin1.material.transparent = true;
+				//violin1.material.opacity = 0;
 				violin.add(violin1);
 
 				var violin2 = new THREE.Mesh(new THREE.CylinderGeometry(1.04, 1.04, 0.336, 32), new THREE.MeshLambertMaterial({
 					color: 0xBB3D00
 				}));
 				violin2.position.set(-1.63, 0, 0);
-				violin2.material.transparent = true;
-				violin2.material.opacity = 0;
+				//violin2.material.transparent = true;
+				//violin2.material.opacity = 0;
 				violin1.add(violin2);
 
 				var violin3 = new THREE.Mesh(new THREE.CylinderGeometry(0.168, 0.168, 3.56, 32), new THREE.MeshLambertMaterial({
@@ -205,8 +205,8 @@
 				}));
 				violin3.rotation.z = Math.PI / 2;
 				violin3.position.set(1.78, 0, 0);
-				violin3.material.transparent = true;
-				violin3.material.opacity = 0;
+				//violin3.material.transparent = true;
+				//violin3.material.opacity = 0;
 				violin1.add(violin3);
 
 				var onProgress = function(xhr) {
@@ -220,7 +220,7 @@
 
 				//THREE.Loader.Handlers.add(/\.dds$/i, new THREE.DDSLoader());
 
-				var mtlLoader = new THREE.MTLLoader();
+				/*var mtlLoader = new THREE.MTLLoader();
 				mtlLoader.setPath('violinmesh/');
 				mtlLoader.load('violin.mtl', function(materials) {
 
@@ -254,7 +254,7 @@
 					///////////////////////////////
 					
 
-				});
+				});*/
 				////////////////////////////////////
 
 				var bow3 = new THREE.Mesh(new THREE.CylinderGeometry(0.05, 0.05, 10, 32), new THREE.MeshLambertMaterial({
