--- a/Meeting/MIDI.js-master/examples/bow-sound3.html
+++ b/Meeting/MIDI.js-master/examples/bow-sound3.html
@@ -25,6 +25,9 @@ body{
 
 <select id='sequence'>
   <option value='ev1' selected> 1 </option>
+  <option value='ev1a1'> 1a1 </option>
+  <option value='ev1a2'> 1a2 </option>
+  <option value='ev1a3'> 1a3 </option>
   <option value='ev1a'> 1a </option>
   <option value='ev1b'> 1b </option>
   <option value='ev2'> 2 </option>
