--- a/Meeting/MIDI.js-master/examples/bow-sound3.html
+++ b/Meeting/MIDI.js-master/examples/bow-sound3.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 <style>
@@ -17,6 +17,21 @@ body{
  overflow: hidden
 }
 </style>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<!-- polyfill -->
+	<script src="../inc/shim/Base64.js" type="text/javascript"></script>
+	<script src="../inc/shim/Base64binary.js" type="text/javascript"></script>
+	<script src="../inc/shim/WebAudioAPI.js" type="text/javascript"></script>
+	<!-- midi.js package -->
+	<script src="../js/midi/audioDetect.js" type="text/javascript"></script>
+	<script src="../js/midi/gm.js" type="text/javascript"></script>
+	<script src="../js/midi/loader.js" type="text/javascript"></script>
+	<script src="../js/midi/plugin.audiotag.js" type="text/javascript"></script>
+	<script src="../js/midi/plugin.webaudio.js" type="text/javascript"></script>
+	<script src="../js/midi/plugin.webmidi.js" type="text/javascript"></script>
+	<!-- utils -->
+	<script src="../js/util/dom_request_xhr.js" type="text/javascript"></script>
+	<script src="../js/util/dom_request_script.js" type="text/javascript"></script>
 </head>
 
 <body> 
@@ -64,19 +79,7 @@ body{
 
 <!-- midi related -->
 	<!-- polyfill -->
-	<script src="./MIDI.js/inc/shim/Base64.js" type="text/javascript"></script>
-	<script src="./MIDI.js/inc/shim/Base64binary.js" type="text/javascript"></script>
-	<script src="./MIDI.js/inc/shim/WebAudioAPI.js" type="text/javascript"></script>
-	<!-- midi.js package -->
-	<script src="./MIDI.js/js/midi/audioDetect.js" type="text/javascript"></script>
-	<script src="./MIDI.js/js/midi/gm.js" type="text/javascript"></script>
-	<script src="./MIDI.js/js/midi/loader.js" type="text/javascript"></script>
-	<script src="./MIDI.js/js/midi/plugin.audiotag.js" type="text/javascript"></script>
-	<script src="./MIDI.js/js/midi/plugin.webaudio.js" type="text/javascript"></script>
-	<script src="./MIDI.js/js/midi/plugin.webmidi.js" type="text/javascript"></script>
-	<!-- utils -->
-	<script src="./MIDI.js/js/util/dom_request_xhr.js" type="text/javascript"></script>
-	<script src="./MIDI.js/js/util/dom_request_script.js" type="text/javascript"></script>
+	
 
 <!-- graphics related -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r78/three.min.js"></script>
