--- a/Meeting/MIDI.js-master/examples/violin21.html
+++ b/Meeting/MIDI.js-master/examples/violin21.html
@@ -1283,8 +1283,8 @@
 			}
 			Peter.v.y = tempP1;
 			Peter.v1.y = tempP2;
-			John.v.y = tempP1;
-			John.v1.y = tempP2;
+			John.v.y = tempP1B;
+			John.v1.y = tempP2B;
 			Peter.vv = Peter.v.clone().sub(Peter.v1);
 			John.vv = John.v.clone().sub(John.v1);
 			var angle = localDir.angleTo(Peter.vv);
