--- a/Meeting/MIDI.js-master/examples/violin21.html
+++ b/Meeting/MIDI.js-master/examples/violin21.html
@@ -1281,6 +1281,21 @@
 			if (anglej > 0) {
 				if (bowP2 < tempP2) tempP2 += anglej;
 			}
+			
+			
+			
+			if (angleiB < 0) {
+				if (bowP1B < tempP1B) tempP1B += angleiB;
+			}
+			if (angleiB > 0) {
+				if (bowP1B > tempP1B) tempP1B += angleiB;
+			}
+			if (anglejB < 0) {
+				if (bowP2B < tempP2B) tempP2B += anglejB;
+			}
+			if (anglejB > 0) {
+				if (bowP2B < tempP2B) tempP2B += anglejB;
+			}
 			Peter.v.y = tempP1;
 			Peter.v1.y = tempP2;
 			John.v.y = tempP1B;
