--- a/Meeting/MIDI.js-master/examples/violin21.html
+++ b/Meeting/MIDI.js-master/examples/violin21.html
@@ -77,6 +77,7 @@
   <option value='ev10'> rondo </option>
   <option value='ev11'> green sleeves </option>
   <option value='ev14'> 測試 </option>
+  <option value='ev14'> 卡農 </option>
 </select>
 
 	</div>
