--- a/Meeting/MIDI.js-master/examples/violin21.html
+++ b/Meeting/MIDI.js-master/examples/violin21.html
@@ -1411,7 +1411,7 @@
 			Peter.target.copy(T);
 			Peter.update();
 			
-			console.log(target);
+			//console.log(target);
 			
 			var T1 = John.bow3.localToWorld(new THREE.Vector3(0, target1, 0));
 			John.tsphere.position.copy(T1);
