--- a/Meeting/MIDI.js-master/examples/violin21.html
+++ b/Meeting/MIDI.js-master/examples/violin21.html
@@ -73,7 +73,7 @@
 
   <option value='ev6c'> 小練習曲</option>
   <option value='ev13'> 小星星 </option>
-  <option value='ev9'> 9 </option>
+  <option value='ev9'>  詼諧曲 </option>
   <option value='ev10'> rondo </option>
   <option value='ev11'> green sleeves </option>
   <option value='ev14'> 測試 </option>
